# espelho-modelo-tese-puc

./: .gitignore  README.md  pyproject.toml
espelho2docx/: cli.py  cls_parser.py  form_builder.py  pandoc.py  parse_tex.py  reference_builder.py  tex_parser.py
espelho2docx/filters/: thesispuc-frontmatter.lua
